{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 69,
  "lineage": "0566c897-60f6-35e6-c629-6182f166eb3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "patty_moore_eip_for_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d637dce2cc94a4",
            "arn": "arn:aws:ec2:us-east-1:203918841420:elastic-ip/eipalloc-023d637dce2cc94a4",
            "association_id": "eipassoc-0f01d55b3ae8f309d",
            "domain": "vpc",
            "id": "eipalloc-023d637dce2cc94a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03318800bb2554760",
            "private_dns": "ip-10-0-1-207.ec2.internal",
            "private_ip": "10.0.1.207",
            "public_dns": "ec2-34-192-41-65.compute-1.amazonaws.com",
            "public_ip": "34.192.41.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "patty_moore_eip_for_nat_gateway"
            },
            "tags_all": {
              "Name": "patty_moore_eip_for_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "patty_moore_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:internet-gateway/igw-040cb165a58352001",
            "id": "igw-040cb165a58352001",
            "owner_id": "203918841420",
            "tags": {
              "Name": "patty_moore_IGW"
            },
            "tags_all": {
              "Name": "patty_moore_IGW"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "patty_moore_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/patty-moore-alb/98361c7efd34d860",
            "arn_suffix": "app/patty-moore-alb/98361c7efd34d860",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "patty-moore-alb-779234588.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/patty-moore-alb/98361c7efd34d860",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "patty-moore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d442a11bee8cfbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07fa3ffaff05d7aff"
              },
              {
                "subnet_id": "subnet-083080e8d119e49cf"
              }
            ],
            "subnets": [
              "subnet-07fa3ffaff05d7aff",
              "subnet-083080e8d119e49cf"
            ],
            "tags": {
              "Name": "patty-moore-alb"
            },
            "tags_all": {
              "Name": "patty-moore-alb"
            },
            "vpc_id": "vpc-0e605f06e421e43f6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_security_group.alb_security_group",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_subnet.patty_moore_public_subnet_az1b",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "patty_moore_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/patty-moore-alb/98361c7efd34d860/853a97a7ca98c33b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/patty-moore-alb/98361c7efd34d860/853a97a7ca98c33b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/patty-moore-alb/98361c7efd34d860",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_lb.patty_moore_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_subnet.patty_moore_public_subnet_az1b",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "patty_moore_alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/patty-moore-alb/98361c7efd34d860/e17e33e22aa2dcd9",
            "certificate_arn": "arn:aws:acm:us-east-1:203918841420:certificate/d7126e33-d8b6-43a6-b2c1-e308212f1856",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/patty-moore-TG/560c2d861489415d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/patty-moore-alb/98361c7efd34d860/e17e33e22aa2dcd9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/patty-moore-alb/98361c7efd34d860",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_internet_gateway.patty_moore_igw",
            "aws_lb.patty_moore_alb",
            "aws_lb_target_group.patty_moore_TG",
            "aws_security_group.alb_security_group",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_subnet.patty_moore_public_subnet_az1b",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "patty_moore_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/patty-moore-TG/560c2d861489415d",
            "arn_suffix": "targetgroup/patty-moore-TG/560c2d861489415d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/patty-moore-TG/560c2d861489415d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/patty-moore-alb/98361c7efd34d860"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "patty-moore-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "patty_moore_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d637dce2cc94a4",
            "association_id": "eipassoc-0f01d55b3ae8f309d",
            "connectivity_type": "public",
            "id": "nat-079d95d4b3a0af946",
            "network_interface_id": "eni-03318800bb2554760",
            "private_ip": "10.0.1.207",
            "public_ip": "34.192.41.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fa3ffaff05d7aff",
            "tags": {
              "Name": "patty_moore_nat_gateway"
            },
            "tags_all": {
              "Name": "patty_moore_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_private_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:route-table/rtb-0563468f95a59d47e",
            "id": "rtb-0563468f95a59d47e",
            "owner_id": "203918841420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-079d95d4b3a0af946",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "patty_moore_private_app_rt"
            },
            "tags_all": {
              "Name": "patty_moore_private_app_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_private_data_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:route-table/rtb-072f366fbefb52b8c",
            "id": "rtb-072f366fbefb52b8c",
            "owner_id": "203918841420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-079d95d4b3a0af946",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "patty_moore_private_data_rt"
            },
            "tags_all": {
              "Name": "patty_moore_private_data_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "patty_moore_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:route-table/rtb-01df6a9b6abf9e7ea",
            "id": "rtb-01df6a9b6abf9e7ea",
            "owner_id": "203918841420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040cb165a58352001",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "patty_moore_public_rt"
            },
            "tags_all": {
              "Name": "patty_moore_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f82f5a5c3a1fa388",
            "route_table_id": "rtb-0563468f95a59d47e",
            "subnet_id": "subnet-0006fbb4e083f5ea1"
          },
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_route_table.patty_moore_private_app_rt",
            "aws_subnet.patty_moore_private_app_subnet_az1a",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be37121e966ce2dd",
            "route_table_id": "rtb-0563468f95a59d47e",
            "subnet_id": "subnet-086926dfcacbe70cb"
          },
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_route_table.patty_moore_private_app_rt",
            "aws_subnet.patty_moore_private_app_subnet_az1b",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69d8cf984d9c3b8",
            "route_table_id": "rtb-072f366fbefb52b8c",
            "subnet_id": "subnet-016e13790b24302ed"
          },
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_route_table.patty_moore_private_data_rt",
            "aws_subnet.patty_moore_private_data_subnet_az1a",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeba9ea738468912",
            "route_table_id": "rtb-072f366fbefb52b8c",
            "subnet_id": "subnet-0aeb2351cd00b80d7"
          },
          "dependencies": [
            "aws_eip.patty_moore_eip_for_nat_gateway",
            "aws_internet_gateway.patty_moore_igw",
            "aws_nat_gateway.patty_moore_nat_gateway",
            "aws_route_table.patty_moore_private_data_rt",
            "aws_subnet.patty_moore_private_data_subnet_az1b",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6738f8471248b33",
            "route_table_id": "rtb-01df6a9b6abf9e7ea",
            "subnet_id": "subnet-07fa3ffaff05d7aff"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_route_table.patty_moore_public_rt",
            "aws_subnet.patty_moore_public_subnet_az1a",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3203af4d9abfd1e",
            "route_table_id": "rtb-01df6a9b6abf9e7ea",
            "subnet_id": "subnet-083080e8d119e49cf"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_route_table.patty_moore_public_rt",
            "aws_subnet.patty_moore_public_subnet_az1b",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:security-group/sg-05d442a11bee8cfbb",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d442a11bee8cfbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "patty_moore_alb_SG",
            "name_prefix": "",
            "owner_id": "203918841420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "patty_moore_alb_SG"
            },
            "tags_all": {
              "Name": "patty_moore_alb_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "patty_moore_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:security-group/sg-006d5493ad44c7477",
            "description": "Allow Internet access to the web server http port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006d5493ad44c7477",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "patty-moore-sg",
            "name_prefix": "",
            "owner_id": "203918841420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "patty-moore-web-server-SG"
            },
            "tags_all": {
              "Name": "patty-moore-web-server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_private_app_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-0006fbb4e083f5ea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006fbb4e083f5ea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_private_app_subnet_az1a"
            },
            "tags_all": {
              "Name": "patty_moore_private_app_subnet_az1a"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_private_app_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-086926dfcacbe70cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086926dfcacbe70cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_private_app_subnet_az1b"
            },
            "tags_all": {
              "Name": "patty_moore_private_app_subnet_az1b"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_private_data_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-016e13790b24302ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016e13790b24302ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_private_data_subnet_az1a"
            },
            "tags_all": {
              "Name": "patty_moore_private_data_subnet_az1a"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_private_data_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-0aeb2351cd00b80d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb2351cd00b80d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_private_data_subnet_az1b"
            },
            "tags_all": {
              "Name": "patty_moore_private_data_subnet_az1b"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_public_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-07fa3ffaff05d7aff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa3ffaff05d7aff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_public_subnet_az1a"
            },
            "tags_all": {
              "Name": "patty_moore_public_subnet_az1a"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patty_moore_public_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-083080e8d119e49cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083080e8d119e49cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "patty_moore_public_subnet_az1b"
            },
            "tags_all": {
              "Name": "patty_moore_public_subnet_az1b"
            },
            "vpc_id": "vpc-0e605f06e421e43f6"
          },
          "dependencies": [
            "aws_internet_gateway.patty_moore_igw",
            "aws_vpc.patty_moore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "patty_moore_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:vpc/vpc-0e605f06e421e43f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbf1fbb4b2926b57",
            "default_route_table_id": "rtb-052f52c8552099391",
            "default_security_group_id": "sg-0f957cdd6f5dd4929",
            "dhcp_options_id": "dopt-03ee71b1cc8f1b084",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e605f06e421e43f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052f52c8552099391",
            "owner_id": "203918841420",
            "tags": {
              "Name": "patty_moore_vpc"
            },
            "tags_all": {
              "Name": "patty_moore_vpc"
            }
          }
        }
      ]
    }
  ]
}